# ticketmeister-rs

./: Cargo.toml  README.md  builder.rs  enums.rs  structs.rs
enums/: discovery_enums.rs  from.rs  mod.rs
src/: discovery.rs  enums.rs  inventory.rs  lib.rs  structs.rs
src/discovery/: api.rs  builder.rs  dma.rs  enums.rs  market.rs  mod.rs  structs.rs
src/enums/: discovery.rs  inventory_enums.rs  mod.rs
src/inventory/: enums.rs  mod.rs  structs.rs
src/structs/: discovery.rs  discovery_structs.rs
structs/: discovery_structs.rs  inventory_structs.rs  mod.rs
